fix spacing

--- a/wp-content/themes/matheus/assets/scss/style.scss
+++ b/wp-content/themes/matheus/assets/scss/style.scss
@@ -488,6 +488,7 @@ main {
     padding: 25% 0 20% 0;
     ul {
       overflow: hidden;
+      padding-bottom: 60px;
     }
   }
   > .slides {
